test/results/invalid-multiple-rules.owltest.stderr
error: there are multiple rules named 'invalid'

  invalid = b
  ~~~~~~~    
  ...
  invalid = c
  ~~~~~~~    

